--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,49 +1,29 @@
 # Add Authors here
-johndoe:
-   name: John Doe
-   username: johndoe
-   site: http://johndoe.com
-   avatar: johndoe.png
-   bio: "Hi I a John, a Web Developer and Designer."
-   email: mail@johndoe.com
+Na-Hyeon-Oh:
+   name: Na-Hyeon-Oh
+   username: Na-Hyeon-Oh
+   avatar: onh.png
+   bio: "Hi I'm Na-hyeon. Nice to meet you :)"
+   email: onh0195@g.skku.edu
    social:
       - title: "github"
-        url: "https://github.com/johndoe"
+        url: "https://github.com/Na-Hyeon-Oh"
       - title: "linkedin"
-        url: "https://www.linkedin.com/in/johndoe"
-      - title: "youtube"
-        url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
-      - title: "facebook"
-        url: "https://www.facebook.com/johndoe"
-      - title: "twitter"
-        url: "https://www.twitter.com/johndoe"
-      - title: "behance"
-        url: "https://behance.com/johndoe"
+        url: "https://www.linkedin.com/in/na-hyeon-oh"
       - title: "instagram"
-        url: "https://instagram.com/johndoe"
-      - title: "medium"
-        url: "https://medium.com/johndoe"
-      - title: "telegram"
-        url: "https://telegram.com/johndoe"
-      - title: "dribbble"
-        url: "https://dribbble.com/johndoe"
-      - title: "flickr"
-        url: "https://flickr.com/johndoe"
-
+        url: "https://instagram.com/hye_on.a"
+        
 xplor4r:
-   name: Sujay kundu
+   name: Na-Hyeon-Oh
    username: xplor4r
-   site: https://sujaykundu.com
    avatar: xplor4r.png
-   bio: "Full Stack Web Developer, based in Bangalore, India"
-   email: mail@sujaykundu.com
+   bio: "Happiness"
+   email: onh0195@g.skku.edu
    social:
       - title: "github"
-        url: "https://github.com/sujaykundu777"
+        url: "https://github.com/Na-Hyeon-Oh"
       - title: "linkedin"
-        url: "https://www.linkedin.com/in/sujaykundu"
-      - title: "youtube"
-        url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
-      - title: "facebook"
-        url: "https://www.facebook.com/sujay.kundu2"
+        url: "https://www.linkedin.com/in/na-hyeon-oh"
+      - title: "instagram"
+        url: "https://instagram.com/hye_on.a"
 
